; ModuleID = '/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-data.c_heap_sift_up.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-data.c_heap_sift_up.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HN = common dso_local global i32 0, align 4
@H = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @heap_sift_up to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @heap_sift_up(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* @HN, align 4
  %8 = add nsw i32 %7, 1
  store i32 %8, i32* @HN, align 4
  store i32 %8, i32* %5, align 4
  br label %9

9:                                                ; preds = %24, %2
  %10 = load i32, i32* %5, align 4
  %11 = icmp sgt i32 %10, 1
  br i1 %11, label %12, label %35

12:                                               ; preds = %9
  %13 = load i32, i32* %5, align 4
  %14 = ashr i32 %13, 1
  store i32 %14, i32* %6, align 4
  %15 = load i32*, i32** @H, align 8
  %16 = load i32, i32* %6, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i32, i32* %15, i64 %17
  %19 = load i32, i32* %3, align 4
  %20 = load i32, i32* %4, align 4
  %21 = call i64 @heap_cmp(i32* %18, i32 %19, i32 %20)
  %22 = icmp sle i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %12
  br label %35

24:                                               ; preds = %12
  %25 = load i32*, i32** @H, align 8
  %26 = load i32, i32* %6, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds i32, i32* %25, i64 %27
  %29 = load i32, i32* %28, align 4
  %30 = load i32*, i32** @H, align 8
  %31 = load i32, i32* %5, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds i32, i32* %30, i64 %32
  store i32 %29, i32* %33, align 4
  %34 = load i32, i32* %6, align 4
  store i32 %34, i32* %5, align 4
  br label %9

35:                                               ; preds = %23, %9
  %36 = load i32, i32* %5, align 4
  ret i32 %36
}

declare dso_local i64 @heap_cmp(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
